# hunter-testing

./: .gitignore  .gitmodules  .travis.yml  README.rst  appveyor.yml  jenkins.py  magnum-build-corrade-rc.sh
.github/: CONTRIBUTING.rst  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  discussion.md  package-request.md
ci/: install-deps.sh
cmake/configs/: default.cmake
cmake/find/: Findlibbacktrace.cmake  Findtiny-process-library.cmake
cmake/modules/: hunter_download.cmake  hunter_download_server_url.cmake  hunter_error_page.cmake  hunter_final_config.cmake  hunter_finalize.cmake  hunter_get_source_subdir.cmake  hunter_make_directory.cmake  hunter_protected_sources.cmake  hunter_source_subdir.cmake
cmake/projects/Assimp/: hunter.cmake
cmake/projects/BZip2/: hunter.cmake
cmake/projects/Boost/: hunter.cmake  hunter.cmake.in
cmake/projects/Catch/: hunter.cmake
cmake/projects/Eigen/: hunter.cmake
cmake/projects/Expat/: hunter.cmake
cmake/projects/FLAC/: hunter.cmake
cmake/projects/GTest/: hunter.cmake
cmake/projects/HastyNoise/: hunter.cmake
cmake/projects/IlmBase/: hunter.cmake
cmake/projects/Immer/: hunter.cmake
cmake/projects/Jpeg/: hunter.cmake
cmake/projects/Lager/: hunter.cmake
cmake/projects/Lua/: hunter.cmake
cmake/projects/OpenAL/: hunter.cmake
cmake/projects/OpenBLAS/: hunter.cmake
cmake/projects/OpenCV/: hunter.cmake
cmake/projects/OpenCV-Extra/: hunter.cmake
cmake/projects/OpenEXR/: hunter.cmake
cmake/projects/OpenSSL/: hunter.cmake
cmake/projects/Opus/: hunter.cmake
cmake/projects/PocoCpp/: hunter.cmake
cmake/projects/Protobuf/: hunter.cmake
cmake/projects/Qt/: hunter.cmake
cmake/projects/SFML/: hunter.cmake
cmake/projects/SPIRV-Headers/: hunter.cmake
cmake/projects/SPIRV-Tools/: hunter.cmake
cmake/projects/Vulkan-Headers/: hunter.cmake
cmake/projects/ZLIB/: hunter.cmake
cmake/projects/Zug/: hunter.cmake
cmake/projects/abseil/: hunter.cmake
cmake/projects/asio/: hunter.cmake
cmake/projects/benchmark/: hunter.cmake
cmake/projects/corrade/: hunter.cmake
cmake/projects/cppast/: hunter.cmake
cmake/projects/cppfs/: hunter.cmake
cmake/schemes/: url_sha1_cmake.cmake.in  url_sha1_download.cmake.in  url_sha1_make_only.cmake.in  url_sha1_pip.cmake.in
docs/: conf.py  contacts.rst  contributing.rst  quick-start.rst
docs/creating-new/: update.rst
docs/faq/: how-to-fix-download-error.rst  why-binaries-from-server-not-used.rst  why-do-we-need-forks.rst  why-hunter-is-slow.rst
docs/old-wiki/: Home.md  Requirements.md  dev.build.schemes.md  dev.hunter.root.md  dev.variables.md  example.custom.config.id.md  example.hunter_configuration_types.md  usr.adding.new.package.custom.scheme.md
docs/overview/: what-is-it.rst  what-is-it.sh
docs/quick-start/: boost-components.rst
docs/reference/: user-variables.rst
examples/: common.cmake
examples/Boost/: CMakeLists.txt
examples/Boost-chrono/: CMakeLists.txt
examples/Boost-chrono-useBoostConfig/: CMakeLists.txt
examples/Boost-contract/: CMakeLists.txt
examples/Boost-fiber/: CMakeLists.txt
examples/Boost-filesystem/: CMakeLists.txt
examples/Boost-filesystem-shared/: config.cmake
examples/Boost-filesystem-useBoostConfig/: CMakeLists.txt
examples/Boost-iostreams/: CMakeLists.txt
examples/Boost-iostreams-useBoostConfig/: CMakeLists.txt  config.cmake
examples/Boost-log/: CMakeLists.txt
examples/Boost-log-shared/: CMakeLists.txt
examples/Boost-log-useBoostConfig/: CMakeLists.txt  foo.cpp
examples/Boost-math/: CMakeLists.txt
examples/Boost-program-options/: CMakeLists.txt
examples/Boost-python/: CMakeLists.txt  config.cmake
examples/Boost-python-numpy/: CMakeLists.txt  config.cmake  foo.cpp
examples/Boost-random/: CMakeLists.txt
examples/Boost-serialization/: CMakeLists.txt
examples/Boost-stacktrace/: CMakeLists.txt
examples/Boost-system/: CMakeLists.txt
examples/Boost-system-1-66/: CMakeLists.txt
examples/Boost-test/: CMakeLists.txt
examples/Boost-thread/: CMakeLists.txt
examples/Boost-useBoostConfig/: CMakeLists.txt
examples/Boost-uuid/: CMakeLists.txt
examples/Eigen-Boost/: CMakeLists.txt
examples/Expat/: CMakeLists.txt
examples/FLAC/: CMakeLists.txt  main.cpp
examples/GTest/: CMakeLists.txt
examples/IlmBase/: CMakeLists.txt  boo.cpp
examples/Immer/: CMakeLists.txt  boo.cpp
examples/Lager/: CMakeLists.txt  boo.cpp
examples/OpenEXR/: CMakeLists.txt  boo.cpp
examples/Opus/: CMakeLists.txt  main.cpp
examples/SFML/: CMakeLists.txt  main.cpp
examples/SPIRV-Headers/: CMakeLists.txt  boo.cpp
examples/SPIRV-Tools/: CMakeLists.txt  boo.cpp
examples/Vulkan-Headers/: CMakeLists.txt  boo.cpp
examples/Zug/: CMakeLists.txt  boo.cpp
examples/abseil/: CMakeLists.txt  boo.cpp
examples/asio/: CMakeLists.txt
examples/cppast/: CMakeLists.txt  boo.cpp
examples/cppfs/: CMakeLists.txt  boo.cpp
examples/date/: CMakeLists.txt  boo.cpp
examples/doctest/: CMakeLists.txt  foo_test.cpp
examples/foo/: CMakeLists.txt
examples/gl4es/: CMakeLists.txt  main.cpp
examples/glm/: core_func_common.cpp
examples/glu/: CMakeLists.txt  main.cpp
examples/hdf5/: CMakeLists.txt
examples/libbacktrace/: CMakeLists.txt  boo.cpp
examples/libigl/: CMakeLists.txt
examples/lz4/: CMakeLists.txt
examples/nng/: CMakeLists.txt  boo.cpp
examples/opusfile/: CMakeLists.txt  main.cpp
examples/re2/: CMakeLists.txt
examples/scelta/: CMakeLists.txt  boo.cpp
examples/shaderc/: CMakeLists.txt  boo.cpp
examples/theora/: CMakeLists.txt  main.cpp
examples/tiny-process-library/: CMakeLists.txt
examples/tinyobjloader/: CMakeLists.txt  boo.cpp
examples/tinyrefl/: CMakeLists.txt  boo.cpp  example.hpp
examples/utf8/: CMakeLists.txt  boo.cpp
examples/uuid/: CMakeLists.txt  boo.cpp
examples/xatlas/: CMakeLists.txt  boo.cpp
examples/zlog/: CMakeLists.txt  boo.c
examples/zstd/: CMakeLists.txt  foo.c
maintenance/: convert_wiki.py  docs_create_missing_stubs.py
scripts/: ShowPredefined.cpp  check-package-naming.py  create-predefined-list.py
(+113 files in other folders)
